java/blog/k8s/blog-bplan.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:18.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: blog
spec:
  selector:
    app: db
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: nginx
          image: REGISTRY/blog-front-nginx:latest
          ports:
            - containerPort: 8080
        - name: api
          image: REGISTRY/blog-api-tomcat:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: front-web
  namespace: blog
spec:
  selector:
    app: front
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: front-api
  namespace: blog
spec:
  selector:
    app: front
  ports:
    - name: api
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: front-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-web
                port:
                  number: 80
